fix for warnings in MoSyncThread.jave
+ replaced new Integer(intValue) with the recommended
Integer.valueOf(intValue)